# el_pico

./: .gitmodules
src/: CMakeLists.txt  aperture.xbm  demo.c  demo_bitbang.c  demo_pio.c  demo_pio_dma.c  demo_tinygl.c  el.pio  el.pio.h  gears.xbm  lenna.xbm
